--- a/render.yaml
+++ b/render.yaml
@@ -2,5 +2,5 @@ services:
   - type: web
     name: hacweektask1
     env: static
-    staticPublishPath: public
+    staticPublishPath: .
     buildCommand: ""
